# syncedit

./: .flaskenv  .gitignore  LICENSE  pyproject.toml  requirements.txt
syncedit/: __init__.py  config.py  models.py
syncedit/auth/: __init__.py  models.py  routes.py
syncedit/filehandler/: __init__.py  models.py  routes.py
syncedit/templates/: index.html
